--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "framer-motion": "^12.24.10",
     "lucide-react": "^0.562.0",
     "microcms-js-sdk": "^3.2.0",
-    "next": "16.1.1",
+    "next": "^15.4.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "tailwind-merge": "^3.4.0"
@@ -35,5 +35,10 @@
     "eslint-config-next": "16.1.1",
     "tailwindcss": "^4",
     "typescript": "^5"
+  },
+  "overrides": {
+    "react": "$react",
+    "react-dom": "$react-dom",
+    "vercel": "latest"
   }
 }
