--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next-on-pages",
+    "build": "next build",
     "pages:build": "npx @cloudflare/next-on-pages",
     "deploy": "wrangler pages deploy",
     "pages:deploy": "wrangler pages deploy",
