--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "wrangler": "^4.58.0"
   },
   "overrides": {
     "react": "$react",
