--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "pages:build": "npx @cloudflare/next-on-pages",
-    "deploy": "wrangler pages deploy",
-    "pages:deploy": "wrangler pages deploy",
+    "deploy": "vercel --prod",
     "start": "next start",
     "lint": "eslint"
   },
@@ -30,7 +28,6 @@
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
-    "@cloudflare/next-on-pages": "^1.13.16",
     "@playwright/test": "^1.57.0",
     "@tailwindcss/postcss": "^4",
     "@tailwindcss/typography": "^0.5.19",
@@ -40,8 +37,7 @@
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
     "tailwindcss": "^4",
-    "typescript": "^5",
-    "wrangler": "^4.58.0"
+    "typescript": "^5"
   },
   "overrides": {
     "react": "$react",
