--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "embla-carousel-react": "^8.6.0",
+    "fluent-ffmpeg": "^2.1.3",
     "framer-motion": "^12.24.10",
+    "googleapis": "^170.1.0",
     "gray-matter": "^4.0.3",
     "html-react-parser": "^5.2.11",
     "lucide-react": "^0.562.0",
     "marked": "^17.0.1",
     "microcms-js-sdk": "^3.2.0",
+    "mp3-duration": "^1.1.0",
     "next": "^16.1.3",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
