--- a/video-generator/package.json
+++ b/video-generator/package.json
@@ -9,6 +9,8 @@
         "upgrade": "remotion upgrade"
     },
     "dependencies": {
+        "fluent-ffmpeg": "^2.1.3",
+        "mp3-duration": "^1.1.0",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "remotion": "4.0.264",
@@ -19,9 +21,9 @@
         "@types/react": "^19.0.0",
         "@types/react-dom": "^19.0.0",
         "@types/web": "^0.0.187",
-        "typescript": "^5.7.0",
+        "eslint": "^8.57.0",
         "prettier": "^3.2.5",
-        "eslint": "^8.57.0"
+        "typescript": "^5.7.0"
     },
     "packageManager": "npm@10.2.4"
 }
