--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "recharts": "^3.6.0",
+    "resend": "^6.8.0",
     "sharp": "^0.34.5",
     "tailwind-merge": "^3.4.0"
   },
