--- a/package.json
+++ b/package.json
@@ -9,9 +9,19 @@
     "start": "next start",
     "lint": "eslint",
     "generate:images": "npx tsx scripts/generate-images.ts",
-    "sync:force": "npx tsx scripts/force_sync_images.ts"
+    "sync:force": "npx tsx scripts/force_sync_images.ts",
+    "project:create": "node scripts/project-manager.js create",
+    "project:list": "node scripts/project-manager.js list",
+    "project:sync": "node scripts/project-manager.js sync-clips",
+    "captions:generate": "node scripts/caption-generator.js",
+    "batch:process": "node scripts/batch-processor.js",
+    "clip:render": "cd video-generator && npx remotion render ClipEditor ../out/final_video.mp4"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.71.2",
+    "@google-cloud/speech": "^7.2.1",
+    "@google-cloud/text-to-speech": "^6.4.0",
+    "@google-cloud/vertexai": "^1.10.0",
     "@google/generative-ai": "^0.24.1",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-select": "^2.2.6",
@@ -22,6 +32,7 @@
     "embla-carousel-react": "^8.6.0",
     "fluent-ffmpeg": "^2.1.3",
     "framer-motion": "^12.24.10",
+    "google-auth-library": "^10.5.0",
     "googleapis": "^170.1.0",
     "gray-matter": "^4.0.3",
     "html-react-parser": "^5.2.11",
