feat: implement multi-brand orchestration and dynamic site configuration (v4.2)

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "project:sync": "node scripts/project-manager.js sync-clips",
     "captions:generate": "node scripts/caption-generator.js",
     "batch:process": "node scripts/batch-processor.js",
+    "publish:all": "node scripts/publish-all.js",
     "clip:render": "cd video-generator && npx remotion render ClipEditor ../out/final_video.mp4"
   },
   "dependencies": {
