--- a/.github/workflows/daily-publish.yml
+++ b/.github/workflows/daily-publish.yml
@@ -2,7 +2,7 @@ name: Daily Multi-Media Publish
 
 on:
   schedule:
-    - cron: "0 15,18,21,00,03 * * *" # Every 3 hours (JST: 00, 03, 06, 09, 12)
+    - cron: "0 0,3,15,18,21 * * *" # Every 3 hours (JST: 09, 12, 00, 03, 06)
   workflow_dispatch: # Manual trigger
 
 jobs:
@@ -48,6 +48,6 @@ jobs:
         run: |
           git config --global user.name "GitHub Action [Bot]"
           git config --global user.email "action@github.com"
-          git add content/ projects/ public/images/
+          git add content/ projects/ public/images/ scripts/last_run.json
           git commit -m "chore: automated content update [skip ci]" || echo "No changes to commit"
           git push
